WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282400
v3 skip markers for JavaScriptCore and WebCore files that do not conform to -Wunsafe-buffer-usage
https://bugs.webkit.org/show_bug.cgi?id=282400
Summary
v3 skip markers for JavaScriptCore and WebCore files that do not conform to -...
Geoffrey Garen
Reported
2024-10-31 12:12:29 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-31 12:12:38 PDT
<
rdar://problem/139019533
>
Geoffrey Garen
Comment 2
2024-10-31 12:14:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36007
EWS
Comment 3
2024-10-31 13:00:28 PDT
Committed
285971@main
(73db6bd1b70f): <
https://commits.webkit.org/285971@main
> Reviewed commits have been landed. Closing PR #36007 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug