Source/WTF/wtf/AccessibleAddress.h
@@ -27,6 +27,8 @@
 
 #include <wtf/WTFConfig.h>
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
 namespace WTF {
 
 inline uintptr_t lowestAccessibleAddress()
@@ -44,3 +46,4 @@ inline uintptr_t highestAccessibleAddress()
 using WTF::lowestAccessibleAddress;
 using WTF::highestAccessibleAddress;
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
